<resources>
    <string name="app_name">Infobyte</string>
    <string name="default_web_client_id">924246441754-ch5givq8kjmo251il9m2ga1brcuh8t80.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_is_sent_to">Code is sent to</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="did_nt_recieve_a_code">Did\'nt recieve a code?</string>
    <string name="requestion_again">Requestion Again</string>
    <string name="verify_and_continue">Verify and continue</string>
    <string name="please_enter_your_mobile_number">Please Enter your Mobile Number</string>
    <string name="you_ll_recieve_a_4_digit_code_nto_verify_next">You\'ll recieve a 4 digit code\nto verify next</string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue1">Continue</string>
    <string name="loading">Loading..</string>
    <string name="logout">logout</string>
    <string name="to_stocks">To Stocks</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="or_ncontinue_with">OR\nContinue with</string>
    <string name="login2">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="email3">Email</string>
    <string name="email4">Email</string>
    <string name="password1">Password</string>
    <string name="password2">Password</string>
    <string name="or_ncontinue_with1">OR\nContinue with</string>
    <string name="sign_up4">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nifty_50">NIFTY 50</string>
    <string name="sensex">SENSEX</string>
    <string name="_56_98">$56.98</string>
    <string name="watchlist">Watchlist</string>
    <string name="chamblfert">CHAMBLFERT</string>
    <string name="chambal_fertiliser">CHAMBAL FERTILISER</string>
</resources>