<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/email3"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/outlinebg"
            android:hint="@string/email4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/password1"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:background="@drawable/outlinebg"
            android:hint="@string/password2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/or_ncontinue_with1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonSignUpWithGoogle"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/google" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:gravity="right"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/phone"/>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/outlinebg"
            android:text="@string/sign_up4"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/btn_already_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>